Prevent small images (smilies, etc...) from being stretched in bp-default responsive CSS.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5735 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/responsive.css
+++ b/bp-themes/bp-default/_inc/css/responsive.css
@@ -56,17 +56,17 @@ Hello, this is the BuddyPress Responsive theme stylesheet
 		margin-bottom: 0;
 	}
 	.wp-caption {
-		width: 99%!important;
+		width: 99% !important;
 	}
 	.entry {
 		width: 100%;
 	}
 	.entry img {
-		width: 100%;
+		max-width: 100%;
 		height: auto;
 	}
 	.wp-caption img {
-		width: 99%;
+		max-width: 99%;
 		height: auto;
 	}
 	#footer-widgets {
@@ -98,11 +98,11 @@ Hello, this is the BuddyPress Responsive theme stylesheet
 		width: 100%;
 	}
 	.entry img {
-		width: 100%;
+		max-width: 100%;
 		height: auto;
 	}
 	.wp-caption img {
-		width: 99%;
+		max-width: 99%;
 		height: auto;
 	}
 	#footer-widget-area div.widget-area > ul {
@@ -187,11 +187,11 @@ Hello, this is the BuddyPress Responsive theme stylesheet
 		width: 100%;
  	}
  	.entry img {
-		width: 100%;
+		max-width: 100%;
 		height: auto;
  	}
  	.wp-caption img {
-		width: 99%;
+		max-width: 99%;
 		height: auto;
  	}
 	#footer-widget-area div.widget-area > ul {
